--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,6 +7,9 @@
         <title>HTML/CSS Tutorial</title>
         <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="styles/style.css">
+        <link rel="stylesheet/less" href="less/build.less">
+        <link rel="stylesheet" type="text/css" href="bower_components/components-font-awesome/css/font-awesome.css">
+
         <script type='text/javascript' src='bower_components/angular/angular.js'></script>
         <script type='text/javascript' src='bower_components/angular-route/angular-route.js'></script>
         <script type='text/javascript' src='bower_components/angular-translate/angular-translate.js'></script>
@@ -18,7 +21,7 @@
         <script type='text/javascript' src='app/controllers/searchController.js'></script>
         <script type='text/javascript' src='app/controllers/languageSwitchingController.js'></script>
         <script type='text/javascript' src='app/filters/T.js'></script>
-
+        <script type='text/javascript' src="bower_components/less.js/dist/less-1.4.0.min.js"></script>
         <!-- <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script> -->
     </head>
     <body>
